--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script defer type="module" src="./js/login.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h2>Sign in</h2>
-        <form action="./profile.html" class="form" id="signInForm">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username">
-                <span class="error"></span>
-            </div>
+ <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/style/css/main.css" />
+ </head>
 
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
-                <span class="error"></span>
-            </div>
-
-            <div class="form-group">
-                <button class="btn" type="submit">Sign in</button>
-            </div>
-
-        </form>
+ <body>
+  <header>
+   <div class="container-fluid d-flex">
+    <p>Header</p>
+   </div>
+  </header>
+  <main>
+   <div class="container-fluid d-flex">
+    <div class="container-fluid">
+     <form action="" method="post" id="login" class="d-flex flex-column gap-3 needs-validation">
+      <div class="form-group was-validated">
+       <label class="form-label" for="email">Email address</label>
+       <input class="form-control" type="email" id="email" name="email" required />
+       <div class="invalid-feedback d-none">Please enter your email address</div>
+      </div>
+      <div class="form-group was-validated">
+       <label class="form-label" for="pw">Password</label>
+       <input class="form-control" type="password" id="pw" name="pw" required />
+       <div class="invalid-feedback d-none">Please enter your password</div>
+      </div>
+      <input class="btn btn-outline-theme text-black w-100" type="submit" value="LogIn" />
+     </form>
     </div>
-</body>
+   </div>
+  </main>
+  <footer>
+   <div class="container-fluid d-flex">
+    <p>Footer</p>
+   </div>
+  </footer>
+  <script src="./src/js/main.js" type="module" defer></script>
+ </body>
 </html>
