--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <p>Footer</p>
    </div>
   </footer>
-  <script src="./src/js/user/index.mjs" type="module" defer></script>
+  <script src="./src/js/main.js" type="module" defer></script>
  </body>
 </html>
