--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <form action="" method="post" id="login" class="d-flex flex-column gap-3 needs-validation">
       <div class="form-group was-validated">
        <label class="form-label" for="email">Email address</label>
-       <input class="form-control" type="email" id="email" name="email" required />
+       <input class="form-control" type="email" id="email" name="email" pattern="[\w\-.]+@(stud.)?noroff.no" title='You can only log in with a valid email that ends with "@noroff.no" or "@stud.noroff.no' required />
        <div class="invalid-feedback d-none">Please enter your email address</div>
       </div>
       <div class="form-group was-validated">
