moving files in folders

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   <main>
    <div class="container-fluid d-flex">
     <div class="container-fluid">
-        <h1>Your profile</h1>
+        <h1>Welcome to your profile page <span id="username"></span></h1>
     </div>
    </div>
   </main>
@@ -26,5 +26,6 @@
     <p>Footer</p>
    </div>
   </footer>
+  <script src="./src/js/user/profile/profile.mjs" type="module"></script>
  </body>
 </html>
