adding more functions
Adding logout function, filtering post for the user profile, error handling messages and some changes to the scripts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Header</p>
    </div>
   </header>
-  <main>
+  <main id="index">
    <div class="container-fluid d-flex">
     <div class="container-fluid">
      <form action="" method="post" id="login" class="d-flex flex-column gap-3 needs-validation">
@@ -38,6 +38,6 @@
     <p>Footer</p>
    </div>
   </footer>
-  <script src="./src/js/main.js" type="module" defer></script>
+  <script src="./src/js/main.mjs" type="module" defer></script>
  </body>
 </html>
